[tool.poetry]
name = "topic-causality"
version = "0.1.0"
description = "ML-backed API that provides causes and effects of the given topic"
authors = ["Joel Quiles <joel@jataware.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "topic_causality"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.6.2"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
click = "8.1.3"
fastapi = "0.92.0"
filelock = "3.9.0"
h11 = "0.14.0"
huggingface-hub = "0.12.0"
idna = "3.4"
numpy = "1.24.2"
packaging = "23.0"
pydantic = "1.10.4"
pyyaml = "6.0"
regex = "2022.10.31"
requests = "2.28.2"
sniffio = "1.3.0"
starlette = "0.25.0"
tokenizers = "0.13.2"
torch = "1.13.1"
tqdm = "4.64.1"
transformers = "4.26.1"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
uvicorn = "0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
